feat: support get screen of web based agent
